--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
+  "author": "Nuggets Technologies(jefferson-ofobrukweta) @spokes",
+  "devDependencies": {
+    "@types/faker": "^4.1.12",
+    "@types/jest": "^26.0.4",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "faker": "^4.1.0",
+    "ts-jest": "^26.1.2",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.5"
+  },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/connect-redis": "^0.0.14",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/ioredis": "^4.16.6",
+    "@types/mongoose": "^5.7.31",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
     "@types/redis": "^2.8.22",
@@ -13,12 +27,14 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "ioredis": "^4.17.3",
+    "jest": "^26.1.0",
+    "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "redis": "^3.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.49",
+    "ts-node-dev": "^1.0.0-pre.51",
     "typescript": "^3.9.5"
   },
   "contributors": [
@@ -35,7 +51,9 @@
   ],
   "main": "src/index.ts",
   "scripts": {
-    "test": "none",
+    "test": "jest --watchAll --runInBand",
+    "lint": "eslint ./src/**/*.ts",
+    "coverage": "jest --coverage",
     "start:dev": "nodemon",
     "build": "rimraf ./dist && tsc",
     "start": "yarn build && yarn start:dev ",
