--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/connect-redis": "^0.0.14",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
+    "@types/express-rate-limit": "^5.0.0",
     "@types/ioredis": "^4.16.6",
     "@types/mongoose": "^5.7.31",
     "@types/morgan": "^1.9.1",
@@ -26,6 +27,7 @@
     "connect-redis": "^4.0.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "ioredis": "^4.17.3",
     "jest": "^26.1.0",
     "mongoose": "^5.9.24",
