--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mongoose": "^5.7.31",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
+    "@types/rate-limit-redis": "^1.7.1",
     "@types/redis": "^2.8.22",
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
@@ -33,6 +34,7 @@
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "rate-limit-redis": "^2.0.0",
     "redis": "^3.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
