--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Nuggets Technologies(jefferson-ofobrukweta) @spokes",
+  "author": "jefferson ofobrukweta @spokes",
   "devDependencies": {
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.4",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/express-rate-limit": "^5.0.0",
@@ -27,6 +28,7 @@
     "@types/redis": "^2.8.22",
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
@@ -47,11 +49,6 @@
       "name": "jefferson Ofobrukweta",
       "url": "https://github.com/jeff-ofobrukweta",
       "githubUsername": "jeff-ofobrukweta"
-    },
-    {
-      "name": "Url Shorter Technology",
-      "url": "https://github.com/",
-      "githubUsername": "UrlisBoring"
     }
   ],
   "main": "src/index.ts",
